--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "nodemon index"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
